--- a/Isen.DotNet.Web/Isen.DotNet.Web.csproj
+++ b/Isen.DotNet.Web/Isen.DotNet.Web.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="2.6.362" />
+    <PackageReference Include="CsvHelper" Version="7.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
